--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,5 +16,23 @@
   }
 }
 
-body {
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation-name: fade-in;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+svg path {
+  shape-rendering: geometricPrecision;
+  stroke-linejoin: round;
 }
